GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/Less_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Less_Lunch__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the time you took for Lunch here.</inlineHelpText>
    <label>Less Lunch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>