GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/Paid_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Paid_Time_Off__c</fullName>
    <formula>PTO_Hours__c  +  HOL_Hours__c  +  Other_Paid_Time_Off_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total paid time off for this entry.</inlineHelpText>
    <label>Paid Time Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>