GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/PTO_Hours__c.field-meta.xml
<CustomField>
    <fullName>PTO_Hours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter any paid time off hours here.</inlineHelpText>
    <label>PTO Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>