GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <inlineHelpText>Enter the start of your day here.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>