GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/Type_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Day__c</fullName>
    <label>Type of Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congés CP</fullName>
            </value>
            <value>
                <fullName>Congés 1/2 CP</fullName>
            </value>
            <value>
                <fullName>Congés RTT</fullName>
            </value>
            <value>
                <fullName>Congés 1/2 RTT</fullName>
            </value>
            <value>
                <fullName>Arrét maladie</fullName>
            </value>
            <value>
                <fullName>CET</fullName>
            </value>
            <value>
                <fullName>Offsite/Expense</fullName>
            </value>
            <value>
                <fullName>Récupération</fullName>
            </value>
            <value>
                <fullName>Maternité</fullName>
            </value>
            <value>
                <fullName>RDV maternité</fullName>
            </value>
            <value>
                <fullName>Paternité</fullName>
            </value>
            <value>
                <fullName>Congé sans solde</fullName>
            </value>
            <value>
                <fullName>Congé conv</fullName>
            </value>
            <value>
                <fullName>Congé sabbatique</fullName>
            </value>
            <value>
                <fullName>Congé parental</fullName>
            </value>
            <value>
                <fullName>Formation/Réunion</fullName>
            </value>
            <value>
                <fullName>WE et/ou férié travaillés</fullName>
            </value>
            <value>
                <fullName>Horaires décalés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>