GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/fields/Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worked_Hours__c</fullName>
    <formula>(((ABS(Start__c  -  End__c)  * 1440) / 60) -  Less_Lunch__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of hours worked for this entry.</inlineHelpText>
    <label>Worked Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>