GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/recordTypes/Timesheet_Entry.recordType-meta.xml
<RecordType>
    <fullName>Timesheet_Entry</fullName>
    <active>true</active>
    <label>Timesheet Entry</label>
</RecordType>