GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/validationRules/Date_needs_to_be_within_TS_date_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_needs_to_be_within_TS_date_range</fullName>
    <active>true</active>
    <description>TimeSheet Entry Date needs to be within TimeSheet date range.</description>
    <errorConditionFormula>MONTH(Date__c)&lt;&gt;MONTH(Timesheet__r.Pay_Period_Start__c)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>The date needs be within TimeSheet range.</errorMessage>
</ValidationRule>