GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/validationRules/Employee_cannot_change_the_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_cannot_change_the_Status</fullName>
    <active>true</active>
    <description>Employees can save records only with Unpaid status or change the status</description>
    <errorConditionFormula>$Permission.Fire_Validated_checkbox_cannot_be_ticked_validation  &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Paid&quot;)</errorConditionFormula>
    <errorMessage>This Paid Timesheet Entry can no longer be amended.</errorMessage>
</ValidationRule>