GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/validationRules/End_within_Timesheet_Pay_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>End_within_Timesheet_Pay_Period</fullName>
    <active>false</active>
    <description>Timesheet Entry End must be less than or equal to Timesheet Pay Period End.</description>
    <errorConditionFormula>IF ( and ( DATEVALUE(End__c)  &lt;&gt; null,  Timesheet__r.Pay_Period_End__c  &lt;&gt;  null, DATEVALUE(End__c) &gt; Timesheet__r.Pay_Period_End__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>The End must be less than or equal to the Timesheet Pay Period End.</errorMessage>
</ValidationRule>