GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/validationRules/No_new_Entry_when_Validated_equals_true.validationRule-meta.xml
<ValidationRule>
    <fullName>No_new_Entry_when_Validated_equals_true</fullName>
    <active>true</active>
    <description>User cannot create new Entry when the Timesheet has been Approved (Validated=true).</description>
    <errorConditionFormula>AND(ISNEW(), Timesheet__r.Validated__c  = true)</errorConditionFormula>
    <errorMessage>Please invalidate the Timesheet before creating new Entry</errorMessage>
</ValidationRule>