GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/validationRules/Start_within_Timesheet_Pay_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_within_Timesheet_Pay_Period</fullName>
    <active>false</active>
    <description>Timesheet Entry Start must be greater or equal than Timesheet Pay Period Start.</description>
    <errorConditionFormula>(NOT(ISNULL( DATEVALUE(Start__c) )) &amp;&amp; NOT(ISNULL( Timesheet__r.Pay_Period_Start__c  )) &amp;&amp; DATEVALUE(Start__c)&lt; Timesheet__r.Pay_Period_Start__c )</errorConditionFormula>
    <errorDisplayField>Start__c</errorDisplayField>
    <errorMessage>The Start must be greater than or equal to the Timesheet Pay Period Start.</errorMessage>
</ValidationRule>