GearsetPOC/force-app/main/default/objects/Timesheet_Entry__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>Timesheet__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date__c</columns>
    <columns>Type_of_Day__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Day__c</field>
        <operation>equals</operation>
        <value>Horaires décalés</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Timesheet_Entry__c.Timesheet_Entry</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>Pending Payments</label>
    <language>en_US</language>
    <sharedTo>
        <group>Timesheet_Finance_team</group>
        <group>Timesheet_Manager</group>
    </sharedTo>
</ListView>